# clipperlib

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README  README.md
.github/workflows/: codeql-analysis.yml
cmake/: FindCairo.cmake
doc/: CMakeLists.txt  welcome.dox
examples/: CMakeLists.txt
examples/cpp_cairo/: CMakeLists.txt  cairo_clipper.cpp  cairo_clipper.hpp  main.cpp
examples/cpp_console/: CMakeLists.txt  clipper_console_demo.cpp
examples/cpp_opengl/: main.cpp
include/clipper/: clipper.hpp
src/: clipper.cpp
tests/: CMakeLists.txt  test_cint.cpp  test_clip.cpp  test_clipper.cpp  test_free_functions.cpp  test_intpoint.cpp  test_main.cpp  test_offset.cpp  test_path.cpp
